--- a/ClientPage/index.html
+++ b/ClientPage/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset='UTF-8'>
   <title>Music</title>
+  <link rel='stylesheet' href='resources/font-awesome-4.5.0/css/font-awesome.min.css'>
   <link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 
@@ -13,32 +14,46 @@
 <div id='screen-view'>
 
   <div id='screen-holder'>
-    <div class='screen'>
-      <div class='titlebar'>
-        <h1>Queue</h1>
+    <div class='screen' id='queue'>
+      <div class='screen-head'>Queue</div>
+      <div class='screen-body'>
+        <!--<ul>
+          <li>Song 1 by Artist 1</li>
+          <li>Song 2 by Artist 2</li>
+          <li>Song 3 by Artist 3</li>
+        </ul>-->
+        <div class='box' id='empty-message'>
+          <i class='fa fa-plus-circle fa-2x'></i>
+          <label>
+            <h3>The queue is empty!</h3>
+            Click to search for songs to add.
+          </label>
+        </div>
       </div>
-
-      <ul>
-        <li>Song 1 by Artist 1</li>
-        <li>Song 2 by Artist 2</li>
-        <li>Song 3 by Artist 3</li>
-      </ul>
     </div>
 
-    <div class='screen'>
-      <h1>Now Playing</h1>
-      <h2>Song by Artist</h2>
+    <div class='screen' id='now-playing'>
+      <div class='screen-head'>Now Playing</div>
+      <div class='screen-body'>
+        <h3>Song by Artist</h3>
+      </div>
     </div>
 
-    <div class='screen'>
-      <h1>Search</h1>
+    <div class='screen' id='search'>
+      <div class='screen-head'>Search</div>
+      <div class='screen-body'>
+        <form id='search-box'>
+          <input type='search' name='ytsearch' placeholder='Search YouTube'/> <!-- search youtube -->
+          <i class='fa fa-search fa-lg'></i>
+        </form>
+      </div>
     </div>
   </div>
 
 </div>
 
-<script type='text/javascript' src='js/underscore.js'></script>
-<script type='text/javascript' src='js/backbone.js'></script>
+<!--<script type='text/javascript' src='js/underscore.js'></script>
+<script type='text/javascript' src='js/backbone.js'></script>-->
 <script type='text/javascript' src='js/hammer.js'></script>
 <script type='text/javascript' src='js/main.js'></script>
 
